--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   shell_lint:
     runs-on: ubuntu-latest
+
     steps:
     - name: Check out code
       uses: actions/checkout@v4.1.1
@@ -22,8 +23,11 @@ jobs:
 
     - name: Install shfmt
       run: |
-        sudo apt-get install -y golang-go
-        go install mvdan.cc/sh/v3/cmd/shfmt@latest
+        sudo apt-get update
+        sudo apt-get install -y curl
+        curl -sSL https://github.com/mvdan/sh/releases/download/v3.6.0/shfmt_v3.6.0_linux_amd64 -o shfmt
+        sudo chmod +x shfmt
+        sudo mv shfmt /usr/local/bin/shfmt
 
     - name: Run shfmt
       run: |
