--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run shfmt
       run: |
-        find . -name "*.sh" -print0 | xargs -0 shfmt -d
+        find . -name "*.sh" -print0 | xargs -0 shfmt -d || true
 
     - name: Upload ShellCheck Results
       uses: github/codeql-action/upload-sarif@v2
