--- a/.github/workflows/shellharden.yml
+++ b/.github/workflows/shellharden.yml
@@ -14,54 +14,31 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4.1.1
     
-    - name: Install shellharden
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y curl
-        # Install shellharden
+        
+    - name: Install shellharden
+      run: |
         curl -LO https://github.com/anordal/shellharden/releases/download/v4.0.0/shellharden-linux-x86_64
-        sudo chmod +x shellharden-linux-x86_64
-        sudo mv shellharden-linux-x86_64 /usr/local/bin/shellharden
+        ls -l shellharden-linux-x86_64 # List the file to verify download
+        chmod +x shellharden-linux-x86_64
+        mv shellharden-linux-x86_64 /usr/local/bin/shellharden
+        ls -l /usr/local/bin/shellharden # Verify file placement and permissions
+
+    - name: Verify shellharden installation
+      run: |
+        shellharden --version # Check if shellharden is executable and available
 
     - name: Run shellharden
       run: |
         mkdir -p output
-        find . -name "*.sh" -print0 | xargs -0 shellharden --check > output/shellharden_results.txt
+        find . -name "*.sh" -print0 | xargs -0 shellharden --check > output/shellharden_results.txt || true # Add || true to prevent failure if shellharden fails
 
-    - name: Convert shellharden Results to SARIF
-      run: |
-        # Create a minimal SARIF file from shellharden results
-        echo '{
-          "version": "2.1.0",
-          "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
-          "runs": [
-            {
-              "tool": {
-                "driver": {
-                  "name": "shellharden",
-                  "informationUri": "https://github.com/anordal/shellharden",
-                  "version": "v4.0.0"
-                }
-              },
-              "results": [
-                {
-                  "ruleId": "shellharden-rule",
-                  "message": {"text": "Check the shellharden results for details."},
-                  "locations": [
-                    {
-                      "physicalLocation": {
-                        "artifactLocation": {"uri": "results.txt"},
-                        "region": {"startLine": 1}
-                      }
-                    }
-                  ]
-                }
-              ]
-            }
-          ]
-        }' > output/results.sarif
-
-    - name: Upload SARIF to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v3
+    - name: Upload shellharden Results
+      uses: actions/upload-artifact@v4.3.1
       with:
-        sarif_file: output/results.sarif
+        name: shellharden-results
+        path: output/shellharden_results.txt
+        retention-days: 5
