--- a/.github/workflows/shellharden.yml
+++ b/.github/workflows/shellharden.yml
@@ -28,10 +28,21 @@ jobs:
         echo "$PATH"
         shellharden --version
 
+    - name: Debug directory contents
+      run: |
+        echo "Checking contents of the repository"
+        ls -al
+        echo "Checking contents of output directory"
+        ls -al output
+
     - name: Run shellharden
       run: |
         mkdir -p output
+        echo "Running shellharden"
+        find . -name "*.sh" -print0
         find . -name "*.sh" -print0 | xargs -0 ~/.local/bin/shellharden --check > output/shellharden_results.txt || true
+        echo "Shellharden results:"
+        cat output/shellharden_results.txt
 
     - name: Upload shellharden Results
       uses: actions/upload-artifact@v4.3.1
